--- a/FU_UWP/dayintishi.xaml
+++ b/FU_UWP/dayintishi.xaml
@@ -5,11 +5,68 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FU_UWP"
         mc:Ignorable="d"
-        Title="dayintishi" Height="1080" Width="1920" WindowState="Normal" AllowsTransparency="True"
+        Title="dayintishi" Height="1080" Width="1920" WindowState="Normal" AllowsTransparency="True" Topmost="True"
         ResizeMode="NoResize" WindowStyle="None" Left="0.0" Top="0.0" Background="Transparent" >
-    <Grid Background="#99000000">
-        <Grid HorizontalAlignment="Left" Height="354" Margin="596,384,0,0" VerticalAlignment="Top" Width="694" Background="White">
-            <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="296,100,0,0" VerticalAlignment="Top" Width="181" Height="113" Click="button_Click"/>
+    <Window.Resources>
+        <Style x:Key="FocusVisual">
+            <Setter Property="Control.Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Rectangle Margin="2" SnapsToDevicePixels="true" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" StrokeThickness="1" StrokeDashArray="1 2"/>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <SolidColorBrush x:Key="Button.Static.Background" Color="#FFDDDDDD"/>
+        <SolidColorBrush x:Key="Button.Static.Border" Color="#FF707070"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FFBEE6FD"/>
+        <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FF3C7FB1"/>
+        <SolidColorBrush x:Key="Button.Pressed.Background" Color="#FFC4E5F6"/>
+        <SolidColorBrush x:Key="Button.Pressed.Border" Color="#FF2C628B"/>
+        <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
+        <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
+        <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
+        <Style x:Key="ButtonStyle1" TargetType="{x:Type Button}">
+            <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisual}"/>
+            <Setter Property="Background" Value="{StaticResource Button.Static.Background}"/>
+            <Setter Property="BorderBrush" Value="{StaticResource Button.Static.Border}"/>
+            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="1"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="true">
+                            <ContentPresenter x:Name="contentPresenter" Focusable="False" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsDefaulted" Value="true">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Background" TargetName="border" Value="{StaticResource Button.Disabled.Background}"/>
+                                <Setter Property="BorderBrush" TargetName="border" Value="{StaticResource Button.Disabled.Border}"/>
+                                <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+    <Grid x:Name="main_grid" Opacity="1" Background="#99000000">
+        <Grid HorizontalAlignment="Left" Height="354" Margin="612,370,0,0" VerticalAlignment="Top" Width="694">
+            <Grid.Background>
+                <ImageBrush ImageSource="images/组成部分/提示框.png"/>
+            </Grid.Background>
+            <Button x:Name="button" Content="" HorizontalAlignment="Left" Margin="570,10,0,0" VerticalAlignment="Top" Width="100" Height="100" Click="button_Click" Style="{DynamicResource ButtonStyle1}" BorderBrush="#00707070" Foreground="#00000000">
+                <Button.Background>
+                    <ImageBrush ImageSource="images/图标/×.png"/>
+                </Button.Background>
+            </Button>
+            <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="206,142,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="254" GotFocus="textBox_GotFocus" MouseDown="textBox_MouseDown"/>
         </Grid>
     </Grid>
 </Window>
