--- a/FU_UWP/MainWindow.xaml
+++ b/FU_UWP/MainWindow.xaml
@@ -84,7 +84,7 @@
                 <ImageBrush ImageSource="images/图标/重拍.png"/>
             </Button.Background>
         </Button>
-        <Grid x:Name="choose" HorizontalAlignment="Left" Height="1080" Margin="266,-1080,0,0" VerticalAlignment="Top" Width="310" Background="#FFBFC1CC">
+        <Grid x:Name="choose" HorizontalAlignment="Left" Height="1080" Margin="266,-1080,0,0" VerticalAlignment="Top" Width="1252" Background="#FFBFC1CC">
             <Grid HorizontalAlignment="Left" Height="1080" VerticalAlignment="Top" Width="310">
                 <Button x:Name="paizhao_Copy" Panel.ZIndex="1" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="265" Height="265" BorderBrush="#00707070" Foreground="#00000000" Style="{DynamicResource ImageButton}" Margin="20,0,0,0">
                     <Button.Background>
@@ -108,10 +108,9 @@
                 </Button>
             </Grid>
             <Grid HorizontalAlignment="Left" Height="1070" Margin="315,0,0,0" VerticalAlignment="Top" Width="310">
-                <ScrollViewer HorizontalAlignment="Left" Height="1070" VerticalAlignment="Top" Width="310">
-                    <StackPanel Height="100" Width="300"/>
-                </ScrollViewer>
+                <ScrollViewer HorizontalAlignment="Left" Height="1070" VerticalAlignment="Top" Width="310"/>
             </Grid>
+            <StackPanel Margin="1381,83,-429,219"/>
         </Grid>
         <Button x:Name="chexiao" Panel.ZIndex="1" Content="" HorizontalAlignment="Center" Margin="1470,1080,250,-200" VerticalAlignment="Center" Width="200" Height="200" BorderBrush="#00707070" Foreground="#00000000" Style="{DynamicResource ImageButton}">
             <Button.Background>
