--- a/FU_UWP/ImageShow.xaml
+++ b/FU_UWP/ImageShow.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="FU_UWP.ImageShow"
+﻿<UserControl x:Class="FU_UWP.ImageShow" x:Name="Algorithm"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,9 +6,9 @@
              xmlns:local="clr-namespace:FU_UWP"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        <Image x:Name="image" HorizontalAlignment="Left" Height="300" VerticalAlignment="Top" Width="300"/>
-        <TextBlock x:Name="textBlock" TextAlignment="Center"  HorizontalAlignment="Left" Margin="0,264,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="300" Height="36" Background="#BD000000" Foreground="White" FontSize="26"/>
+    <Grid x:Name="main">
+        <Image x:Name="image" HorizontalAlignment="Left" Height="300" VerticalAlignment="Top" Width="300" Source="{Binding ImageSourceNormal}"/>
+        <TextBlock x:Name="textBlock" TextAlignment="Center"  HorizontalAlignment="Left" Margin="0,264,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" Height="36" Background="#BD000000" Foreground="White" FontSize="26"/>
 
     </Grid>
 </UserControl>
