--- a/FU_UWP/MainWindow.xaml
+++ b/FU_UWP/MainWindow.xaml
@@ -55,6 +55,22 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        <ControlTemplate x:Key="ScrollViewerControlTemplate1" TargetType="{x:Type ScrollViewer}">
+            <Grid x:Name="Grid" Background="{TemplateBinding Background}">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Rectangle x:Name="Corner" Grid.Column="1" Fill="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Grid.Row="1"/>
+                <ScrollContentPresenter x:Name="PART_ScrollContentPresenter" CanContentScroll="{TemplateBinding CanContentScroll}" CanHorizontallyScroll="False" CanVerticallyScroll="False" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" Grid.Column="0" Margin="{TemplateBinding Padding}" Grid.Row="0"/>
+                <ScrollBar x:Name="PART_VerticalScrollBar" AutomationProperties.AutomationId="VerticalScrollBar" Cursor="Arrow" Grid.Column="1" Maximum="{TemplateBinding ScrollableHeight}" Minimum="0" Grid.Row="0" Visibility="{TemplateBinding ComputedVerticalScrollBarVisibility}" Value="{Binding VerticalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" ViewportSize="{TemplateBinding ViewportHeight}"/>
+                <ScrollBar x:Name="PART_HorizontalScrollBar" AutomationProperties.AutomationId="HorizontalScrollBar" Cursor="Arrow" Grid.Column="0" Maximum="{TemplateBinding ScrollableWidth}" Minimum="0" Orientation="Horizontal" Grid.Row="1" Visibility="{TemplateBinding ComputedHorizontalScrollBarVisibility}" Value="{Binding HorizontalOffset, Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" ViewportSize="{TemplateBinding ViewportWidth}"/>
+            </Grid>
+        </ControlTemplate>
     </Window.Resources>
 
 
@@ -84,33 +100,41 @@
                 <ImageBrush ImageSource="images/图标/重拍.png"/>
             </Button.Background>
         </Button>
-        <Grid x:Name="choose" HorizontalAlignment="Left" Height="1080" Margin="266,-1080,0,0" VerticalAlignment="Top" Width="1252" Background="#FFBFC1CC">
-            <Grid HorizontalAlignment="Left" Height="1080" VerticalAlignment="Top" Width="310">
-                <Button x:Name="paizhao_Copy" Panel.ZIndex="1" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="265" Height="265" BorderBrush="#00707070" Foreground="#00000000" Style="{DynamicResource ImageButton}" Margin="20,0,0,0">
+        <Grid x:Name="choose" HorizontalAlignment="Left" Height="1080" Margin="266,-1080,0,0" VerticalAlignment="Top" Width="310" Background="#FFBFC1CC">
+            <Grid x:Name="choose1" HorizontalAlignment="Left" Height="1080" VerticalAlignment="Top" Width="310">
+                <Button x:Name="fenggemofangbutton" Panel.ZIndex="1" Content="" HorizontalAlignment="Left" VerticalAlignment="Top" Width="265" Height="265" BorderBrush="#00707070" Foreground="#00000000" Style="{DynamicResource ImageButton}" Margin="20,0,0,0" Click="Algorithomlist_click">
                     <Button.Background>
                         <ImageBrush ImageSource="images/图标/风格模仿.png"/>
                     </Button.Background>
                 </Button>
-                <Button x:Name="paizhao_Copy1" Panel.ZIndex="1" Content="" HorizontalAlignment="Left" Margin="20,265,0,0" VerticalAlignment="Top" Width="265" Height="265" BorderBrush="#00707070" Foreground="#00000000" Style="{DynamicResource ImageButton}">
+                <Button x:Name="lvjingbutton" Panel.ZIndex="1" Content="" HorizontalAlignment="Left" Margin="20,265,0,0" VerticalAlignment="Top" Width="265" Height="265" BorderBrush="#00707070" Foreground="#00000000" Style="{DynamicResource ImageButton}" Click="Algorithomlist_click">
                     <Button.Background>
                         <ImageBrush ImageSource="images/图标/滤镜.png"/>
                     </Button.Background>
                 </Button>
-                <Button x:Name="paizhao_Copy2" Panel.ZIndex="1" Content="" HorizontalAlignment="Left" Margin="20,530,0,0" VerticalAlignment="Top" Width="265" Height="265" BorderBrush="#00707070" Foreground="#00000000" Style="{DynamicResource ImageButton}">
+                <Button x:Name="tiaozhengbutton" Panel.ZIndex="1" Content="" HorizontalAlignment="Left" Margin="20,530,0,0" VerticalAlignment="Top" Width="265" Height="265" BorderBrush="#00707070" Foreground="#00000000" Style="{DynamicResource ImageButton}" Click="Algorithomlist_click">
                     <Button.Background>
                         <ImageBrush ImageSource="images/图标/局部调整.png"/>
                     </Button.Background>
                 </Button>
-                <Button x:Name="paizhao_Copy3" Panel.ZIndex="1" Content="" HorizontalAlignment="Left" Margin="20,795,0,0" VerticalAlignment="Top" Width="265" Height="265" BorderBrush="#00707070" Foreground="#00000000" Style="{DynamicResource ImageButton}">
+                <Button x:Name="tiezhibutton" Panel.ZIndex="1" Content="" HorizontalAlignment="Left" Margin="20,795,0,0" VerticalAlignment="Top" Width="265" Height="265" BorderBrush="#00707070" Foreground="#00000000" Style="{DynamicResource ImageButton}" Click="Algorithomlist_click">
                     <Button.Background>
                         <ImageBrush ImageSource="images/图标/贴纸.png"/>
                     </Button.Background>
                 </Button>
             </Grid>
-            <Grid HorizontalAlignment="Left" Height="1070" Margin="315,0,0,0" VerticalAlignment="Top" Width="310">
-                <ScrollViewer HorizontalAlignment="Left" Height="1070" VerticalAlignment="Top" Width="310"/>
-            </Grid>
-            <StackPanel Margin="1381,83,-429,219"/>
+            <ScrollViewer x:Name="fenggemofang" PanningMode="Both" ManipulationBoundaryFeedback="SCManipulationBoundaryFeedback"  HorizontalAlignment="Left" Height="1070" VerticalAlignment="Top" Width="310" Margin="310,0,0,0" Template="{DynamicResource ScrollViewerControlTemplate1}">
+                <StackPanel x:Name="stack_fenggemofang" Height="0" Width="300"/>
+            </ScrollViewer>
+            <ScrollViewer x:Name="lvjing" PanningMode="Both" ManipulationBoundaryFeedback="SCManipulationBoundaryFeedback" HorizontalAlignment="Left" Height="1070" VerticalAlignment="Top" Width="310" Margin="316,0,0,0">
+                <StackPanel x:Name="stack_lvjing" Height="0" Width="300"/>
+            </ScrollViewer>
+            <ScrollViewer x:Name="tiaozheng" PanningMode="Both" ManipulationBoundaryFeedback="SCManipulationBoundaryFeedback" HorizontalAlignment="Left" Height="1070" VerticalAlignment="Top" Width="310" Margin="316,0,0,0">
+                <StackPanel x:Name="stack_tiaozheng" Height="0" Width="300"/>
+            </ScrollViewer>
+            <ScrollViewer x:Name="tiezhi" PanningMode="Both" ManipulationBoundaryFeedback="SCManipulationBoundaryFeedback" HorizontalAlignment="Left" Height="1070" VerticalAlignment="Top" Width="310" Margin="310,0,0,0">
+                <StackPanel x:Name="stack_tiezhi" Height="0" Width="300"/>
+            </ScrollViewer>
         </Grid>
         <Button x:Name="chexiao" Panel.ZIndex="1" Content="" HorizontalAlignment="Center" Margin="1470,1080,250,-200" VerticalAlignment="Center" Width="200" Height="200" BorderBrush="#00707070" Foreground="#00000000" Style="{DynamicResource ImageButton}">
             <Button.Background>
