--- a/FU_UWP/MainWindow.xaml
+++ b/FU_UWP/MainWindow.xaml
@@ -141,6 +141,12 @@
                 <ImageBrush ImageSource="images/图标/撤销.png"/>
             </Button.Background>
         </Button>
+        <Grid x:Name="shan" Visibility="Hidden" Opacity="0" HorizontalAlignment="Left" Height="900" Margin="360,90,0,0" VerticalAlignment="Top" Width="1200" Background="#BF000000"/>
+        <Button x:Name="chexiao2" Panel.ZIndex="1" Visibility="Hidden" Opacity="0" Content="" HorizontalAlignment="Left" Margin="576,51,0,0" VerticalAlignment="Top" Width="100" Height="100" BorderBrush="#00707070" Foreground="#00000000" Style="{DynamicResource ImageButton}" Click="chexiao2_Click">
+            <Button.Background>
+                <ImageBrush ImageSource="images/撤销.png"/>
+            </Button.Background>
+        </Button>
 
     </Grid>
 </Window>
