--- a/FU_UWP/MainWindow.xaml
+++ b/FU_UWP/MainWindow.xaml
@@ -89,12 +89,12 @@
             </Button.Background>
         </Button>
         <Image x:Name="image1" HorizontalAlignment="Left" Height="22" Margin="0,438,0,0" VerticalAlignment="Top" Width="1920" Source="images/组成部分/小蓝条.png" Stretch="Fill"/>
-        <Grid x:Name="paizhaokuang" Opacity="0" Panel.ZIndex="0" HorizontalAlignment="Left" Height="920" Margin="350,80,0,0" VerticalAlignment="Top" Width="1220">
-            <Grid.Background>
+        <Canvas x:Name="paizhaokuang" Opacity="0" Panel.ZIndex="0" HorizontalAlignment="Left" Height="920" Margin="350,80,0,0" VerticalAlignment="Top" Width="1220">
+            <Canvas.Background>
                 <ImageBrush ImageSource="images/组成部分/拍照框.png"/>
-            </Grid.Background>
+            </Canvas.Background>
             <Image x:Name="image" HorizontalAlignment="Left" Height="900" Margin="10,10,0,0" VerticalAlignment="Top" Width="1200"/>
-        </Grid>
+        </Canvas>
         <Button x:Name="chongpai" Panel.ZIndex="1" Content="" HorizontalAlignment="Center" Margin="1920,670,-200,210" VerticalAlignment="Center" Width="200" Height="200" BorderBrush="#00707070" Foreground="#00000000" Style="{DynamicResource ImageButton}" Click="chongpai_Click">
             <Button.Background>
                 <ImageBrush ImageSource="images/图标/重拍.png"/>
@@ -136,7 +136,7 @@
                 <StackPanel x:Name="stack_tiezhi" Height="0" Width="300" Background="#FFBFC1CC"/>
             </ScrollViewer>
         </Grid>
-        <Button x:Name="chexiao" Panel.ZIndex="1" Content="" HorizontalAlignment="Center" Margin="1470,1080,250,-200" VerticalAlignment="Center" Width="200" Height="200" BorderBrush="#00707070" Foreground="#00000000" Style="{DynamicResource ImageButton}">
+        <Button x:Name="chexiao" Panel.ZIndex="1" Content="" HorizontalAlignment="Center" Margin="1470,1080,250,-200" VerticalAlignment="Center" Width="200" Height="200" BorderBrush="#00707070" Foreground="#00000000" Style="{DynamicResource ImageButton}" Click="chexiao_Click">
             <Button.Background>
                 <ImageBrush ImageSource="images/图标/撤销.png"/>
             </Button.Background>
