--- a/FU_UWP/MainWindow.xaml
+++ b/FU_UWP/MainWindow.xaml
@@ -127,6 +127,7 @@
                         <ImageBrush ImageSource="images/图标/贴纸.png"/>
                     </Button.Background>
                 </Button>
+                <Slider x:Name="slider" HorizontalAlignment="Left" Margin="321,247,-42,0" VerticalAlignment="Top" Width="31" Orientation="Vertical" Height="621" Minimum="-100" Maximum="100"/>
             </Grid>
             <ScrollViewer x:Name="fenggemofang" PanningMode="Both" ManipulationBoundaryFeedback="SCManipulationBoundaryFeedback"  HorizontalAlignment="Left" Height="1070" VerticalAlignment="Top" Width="310" Margin="310,0,0,0" Template="{DynamicResource ScrollViewerControlTemplate1}">
                 <StackPanel x:Name="stack_fenggemofang" Height="0" Width="300"/>
@@ -134,7 +135,7 @@
             <ScrollViewer x:Name="lvjing" PanningMode="Both" ManipulationBoundaryFeedback="SCManipulationBoundaryFeedback" HorizontalAlignment="Left" Height="1070" VerticalAlignment="Top" Width="310" Margin="316,0,0,0">
                 <StackPanel x:Name="stack_lvjing" Height="0" Width="300"/>
             </ScrollViewer>
-            <ScrollViewer x:Name="tiaozheng" PanningMode="Both" ManipulationBoundaryFeedback="SCManipulationBoundaryFeedback" HorizontalAlignment="Left" Height="1070" VerticalAlignment="Top" Width="310" Margin="316,0,0,0">
+            <ScrollViewer x:Name="tiaozheng" PanningMode="Both" ManipulationBoundaryFeedback="SCManipulationBoundaryFeedback" HorizontalAlignment="Left" Height="1070" VerticalAlignment="Top" Width="310" Margin="316,0,0,0" Background="#FFBFC1CC">
                 <StackPanel x:Name="stack_tiaozheng" Height="0" Width="300"/>
             </ScrollViewer>
             <ScrollViewer x:Name="tiezhi" PanningMode="Both" ManipulationBoundaryFeedback="SCManipulationBoundaryFeedback" HorizontalAlignment="Left" Height="1070" VerticalAlignment="Top" Width="310" Margin="310,0,0,0">
