--- a/FU_UWP/ImageShow.xaml
+++ b/FU_UWP/ImageShow.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid x:Name="main">
         <Image x:Name="image" HorizontalAlignment="Left" Height="300" VerticalAlignment="Top" Width="300" Source="{Binding ImageSourceNormal}"/>
-        <TextBlock x:Name="textBlock" TextAlignment="Center"  HorizontalAlignment="Left" Margin="0,264,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" Height="36" Background="#BD000000" Foreground="White" FontSize="26"/>
-
+        <TextBlock x:Name="textBlock" Panel.ZIndex="2" TextAlignment="Center"  HorizontalAlignment="Left" Margin="0,264,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" Height="36" Background="#BD000000" Foreground="White" FontSize="26"/>
+        <Image x:Name="borderimage" Panel.ZIndex="1" Opacity="0" Source="images/组成部分/拍照框.png" Stretch="Fill"/>
     </Grid>
 </UserControl>
